# # Version 1
# # indicate the minium version of cmake required
# cmake_minimum_required(VERSION 3.10)
# # indicate the name of the project
# project(test)

# add_executable(test main.cpp factorial.cpp printhello.cpp)

# # Version 2
# # indicate the minium version of cmake required
# cmake_minimum_required(VERSION 3.10)
# # indicate the name of the project
# project(test)

# # search the source file in indicated directory
# aux_source_directory(. DIR_SCRS)

# add_executable(test ${DIR_SCRS})

# Version 3